--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
     <div class="project">
         <div class="project1">
             <img class="project-photo" src="./digital-marketing.jpg" alt="digital-marketing">
-            <h3 class="h6 ">Digital marketing analysis</h3>
+            <div class="project-name"><h3 class="h6">Digital marketing analysis</h3></div>
         </div>
         <div class="project2">
             <img class="project-photo" src="./online-shop.png" alt="online-shop">
-            <h3 class="h6">Online web shop</h3>
+            <div class="project-name"><h3 class="h6">Online web shop</h3></div>
         </div>
         <div class="project3">
             <img class="project-photo" src="./laptop_error.png" alt="error">
-            <h3 class="h6">Laptop application</h3>
+            <div class="project-name"><h3 class="h6">Laptop application</h3></div>
         </div>
     </div>
     <h2>Work</h2>
